--- a/locales/de.json
+++ b/locales/de.json
@@ -43,7 +43,7 @@
     "subtitle": "METRA Plattform-Lösungen",
     "description": "Sicherheit, Rückverfolgbarkeit und regulatorisches Vertrauen für das Management von Luft- und Raumfahrt-Assets",
     "pselion": {
-      "title": "PSELION",
+      "title": "Pselion",
       "subtitle": "Echtzeit-Asset-Management",
       "description": "Erhaltung des Asset-Werts durch lebenszyklus-weite Datenkontrolle und aktive Compliance",
       "features": {
