--- a/locales/en.json
+++ b/locales/en.json
@@ -9,7 +9,7 @@
     "poweredBy": "Powered by METRA Blockchain",
     "title": "TRANSFORMING AEROSPACE",
     "subtitle": "Trusted data and intelligent infrastructure, redefining standards in compliance, traceability, and predictive performance",
-    "cta": "Discover METRA Platform",
+    "cta": "Discover our ecosystem",
     "trustIndicators": {
       "sovereign": "Sovereign Blockchain Backbone",
       "compliant": "EASA & FAA Compliant",
@@ -43,7 +43,7 @@
     "subtitle": "METRA Platform Solutions",
     "description": "Security, traceability, and regulatory trust for aerospace asset management",
     "pselion": {
-      "title": "PSELION",
+      "title": "Pselion",
       "subtitle": "Real-time Asset Management",
       "description": "Preserve asset value via lifecycle-wide data control and active compliance",
       "features": {
