--- a/locales/fr.json
+++ b/locales/fr.json
@@ -9,7 +9,7 @@
     "poweredBy": "Propulsé par METRA Blockchain",
     "title": "TRANSFORMER L'AÉROSPATIALE",
     "subtitle": "Données fiables et infrastructure intelligente, redéfinissant les standards en conformité, traçabilité et performance prédictive",
-    "cta": "Découvrir la plateforme METRA",
+    "cta": "Découvrir nos solutions",
     "trustIndicators": {
       "sovereign": "Backbone Blockchain Souverain",
       "compliant": "Conforme EASA & FAA",
@@ -43,7 +43,7 @@
     "subtitle": "Solutions de la Plateforme METRA",
     "description": "Sécurité, traçabilité et confiance réglementaire pour la gestion d'actifs aérospatiaux",
     "pselion": {
-      "title": "PSELION",
+      "title": "Pselion",
       "subtitle": "Gestion d'Actifs en Temps Réel",
       "description": "Préserver la valeur des actifs via un contrôle des données sur tout le cycle de vie et une conformité active",
       "features": {
