--- a/locales/de.json
+++ b/locales/de.json
@@ -132,7 +132,7 @@
   "technology": {
     "title": "Modernster Technologie-Stack",
     "subtitle": "Basierend auf den fortschrittlichsten und sichersten verfügbaren Technologien",
-    "metraBackbone": "METRA BLOCKCHAIN BACKBONE",
+    "metraBackbone": "ARTS INNOVATIONS BACKBONE",
     "metraDescription": "Souveräne Blockchain entwickelt, um Sicherheit, Rückverfolgbarkeit und regulatorisches Vertrauen in das Luft- und Raumfahrt-Asset-Management zu bringen",
     "labels": {
       "aiAnalytics": "KI-Analytik",
