--- a/locales/en.json
+++ b/locales/en.json
@@ -132,7 +132,7 @@
   "technology": {
     "title": "Cutting-Edge Technology Stack",
     "subtitle": "Built on the most advanced and secure technologies available today",
-    "metraBackbone": "METRA BLOCKCHAIN BACKBONE",
+    "metraBackbone": "ARTS INNOVATIONS BACKBONE",
     "metraDescription": "Sovereign blockchain designed to bring security, traceability, and regulatory trust to aerospace asset management",
     "labels": {
       "aiAnalytics": "AI Analytics",
