--- a/locales/fr.json
+++ b/locales/fr.json
@@ -132,7 +132,7 @@
   "technology": {
     "title": "Stack Technologique de Pointe",
     "subtitle": "Construit sur les technologies les plus avancées et sécurisées disponibles aujourd'hui",
-    "metraBackbone": "METRA BLOCKCHAIN BACKBONE",
+    "metraBackbone": "ARTS INNOVATIONS",
     "metraDescription": "Blockchain souveraine conçue pour apporter sécurité, traçabilité et confiance réglementaire à la gestion d'actifs aérospatiaux",
     "labels": {
       "aiAnalytics": "Analytique IA",
