Implements actions buttons

--- a/locales/de.json
+++ b/locales/de.json
@@ -10,7 +10,7 @@
     "poweredBy": "Powered by METRA Blockchain",
     "title": "LUFT- UND RAUMFAHRT TRANSFORMIEREN",
     "subtitle": "Vertrauenswürdige Daten und intelligente Infrastruktur, die Standards in Compliance, Rückverfolgbarkeit und prädiktiver Leistung neu definieren",
-    "cta": "METRA Plattform entdecken",
+    "cta": "ARTS Plattform entdecken",
     "trustIndicators": {
       "sovereign": "Souveränes Blockchain-Backbone",
       "compliant": "EASA & FAA konform",
@@ -261,7 +261,7 @@
   },
   "contact": {
     "title": "Starten Sie Ihre digitale Transformation",
-    "subtitle": "Bereit, Ihre Luftfahrtoperationen mit METRA zu revolutionieren? Lassen Sie uns besprechen, wie wir helfen können.",
+    "subtitle": "Bereit, Ihre Luftfahrtoperationen mit ARTS Innovations zu revolutionieren? Lassen Sie uns besprechen, wie wir helfen können.",
     "team": "Lernen Sie unser Team kennen",
     "teamDescription": "Verbinden Sie sich direkt mit unseren Luft- und Raumfahrt- und Technologieexperten.",
     "form": {
