--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
     "poweredBy": "Powered by METRA Blockchain",
     "title": "TRANSFORMING AEROSPACE",
     "subtitle": "Trusted data and intelligent infrastructure, redefining standards in compliance, traceability, and predictive performance",
-    "cta": "Discover METRA Platform",
+    "cta": "Discover our solutions",
     "trustIndicators": {
       "sovereign": "Private Blockchain",
       "compliant": "EASA & FAA Compliant",
@@ -261,7 +261,7 @@
   },
   "contact": {
     "title": "Start Your Digital Transformation",
-    "subtitle": "Ready to revolutionize your aviation operations with METRA? Let's discuss how we can help.",
+    "subtitle": "Ready to revolutionize your aviation operations with ARTS Innovations? Let's discuss how we can help.",
     "team": "Meet Our Team",
     "teamDescription": "Connect directly with our aerospace and technology experts.",
     "form": {
