--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,7 +10,7 @@
     "poweredBy": "Propulsé par METRA Blockchain",
     "title": "TRANSFORMER L'AÉROSPATIALE",
     "subtitle": "Données fiables et infrastructure intelligente, redéfinissant les standards en conformité, traçabilité et performance prédictive",
-    "cta": "Découvrir la plateforme METRA",
+    "cta": "Découvrir nos solutions",
     "trustIndicators": {
       "sovereign": "Blockchain Privée",
       "compliant": "Conforme EASA & FAA",
@@ -261,7 +261,7 @@
   },
   "contact": {
     "title": "Commencez Votre Transformation Numérique",
-    "subtitle": "Prêt à révolutionner vos opérations aéronautiques avec METRA ? Discutons de la façon dont nous pouvons vous aider.",
+    "subtitle": "Prêt à révolutionner vos opérations aéronautiques avec ARTS Innovations ? Discutons de la façon dont nous pouvons vous aider.",
     "team": "Rencontrez Notre Équipe",
     "teamDescription": "Connectez-vous directement avec nos experts en aérospatiale et technologie.",
     "form": {
