Change page structure

--- a/locales/de.json
+++ b/locales/de.json
@@ -45,8 +45,8 @@
     "subtitle": "METRA Plattform-Lösungen",
     "description": "Sicherheit, Rückverfolgbarkeit und regulatorisches Vertrauen für das Management von Luft- und Raumfahrt-Assets",
     "keyFeatures": "Hauptmerkmale:",
-    "pselion": {
-      "title": "PSELION",
+    "metrafleet": {
+      "title": "MetraFleet",
       "subtitle": "Echtzeit-Asset-Management",
       "description": "Erhaltung des Asset-Werts durch lebenszyklus-weite Datenkontrolle und aktive Compliance",
       "features": {
