--- a/locales/fr.json
+++ b/locales/fr.json
@@ -45,7 +45,7 @@
     "subtitle": "Solutions de la Plateforme METRA",
     "description": "Sécurité, traçabilité et confiance réglementaire pour la gestion d'actifs aérospatiaux",
     "keyFeatures": "Caractéristiques Clés :",
-    "pselion": {
+    "metrafleet": {
       "title": "PSELION",
       "subtitle": "Gestion d'Actifs en Temps Réel",
       "description": "Préserver la valeur des actifs via un contrôle des données sur tout le cycle de vie et une conformité active",
