--- a/locales/en.json
+++ b/locales/en.json
@@ -266,6 +266,35 @@
       }
     }
   },
+  "faq": {
+    "title": "FAQ",
+    "description": "Here are some of our most frequently asked questions. If you don't find yours here, feel free to",
+    "cta": "contact us",
+    "technologies": {
+      "question": "What technologies do you work with?",
+      "answer": "At our company, we specialize in cutting-edge cloud technologies and modern development practices. Our expertise covers cloud platforms like AWS, Azure, and Google Cloud, along with modern frameworks such as React, Next.js, Node.js, and Python. We also work extensively with containerization technologies like Docker and Kubernetes, and implement CI/CD pipelines using GitHub Actions, Jenkins, and various DevOps tools."
+    },
+    "adoption": {
+      "question": "How do you ensure high adoption rates for your solutions?",
+      "answer": "We focus on user-centered design and comprehensive training programs. Our approach includes conducting thorough user research, creating intuitive interfaces, providing extensive documentation, and offering ongoing support. We also implement gradual rollout strategies and gather continuous feedback to ensure smooth adoption and maximum value realization."
+    },
+    "approach": {
+      "question": "What is your approach when starting a new project?",
+      "answer": "We begin every project with a comprehensive discovery phase where we thoroughly understand your business goals, technical requirements, and existing infrastructure. Our team conducts stakeholder interviews, technical audits, and market research to create a tailored strategy that aligns with your objectives and ensures successful project delivery."
+    },
+    "partners": {
+      "question": "Do you work with companies of all sizes?",
+      "answer": "Yes, we work with organizations ranging from innovative startups to Fortune 500 enterprises. Our scalable approach allows us to adapt our methodologies and solutions to meet the specific needs, budget constraints, and growth objectives of each client, regardless of their size or industry."
+    },
+    "hosting": {
+      "question": "Where are the solutions you implement hosted?",
+      "answer": "We offer flexible hosting solutions to meet your security and compliance requirements. Our solutions can be deployed on major cloud platforms (AWS, Azure, Google Cloud), hybrid environments, or on-premises infrastructure. We work with you to determine the best hosting strategy based on your data sensitivity, performance requirements, and regulatory compliance needs."
+    },
+    "support": {
+      "question": "What kind of ongoing support do you provide?",
+      "answer": "We provide comprehensive post-launch support including 24/7 monitoring, regular maintenance updates, performance optimization, and technical support. Our support packages range from basic maintenance to full managed services, ensuring your solutions continue to perform optimally and evolve with your business needs."
+    }
+  },
   "contact": {
     "title": "Start Your Digital Transformation",
     "subtitle": "Ready to revolutionize your aviation operations with ARTS Innovations? Let's discuss how we can help.",
