--- a/locales/fr.json
+++ b/locales/fr.json
@@ -4,6 +4,7 @@
     "useCases": "Cas d'usage",
     "technology": "Technologie",
     "about": "À propos",
+    "faq": "FAQ",
     "contact": "Contact"
   },
   "hero": {
